data/collection/fixes/descriptions/scala/scala-6604
```scala
scala> scala.util.control.Exception.catching(classOf[ClassNotFoundException]).opt(Class.forName(""))
<console>:8: error: type mismatch;
 found   : java.lang.Class[_]
 required: java.lang.Class[?0(in value res0)] where type ?0(in value res0)
Note: Any >: ?0, but Java-defined class Class is invariant in type T.
You may wish to investigate a wildcard type such as `_ >: ?0`. (SLS 3.2.10)
              scala.util.control.Exception.catching(classOf[ClassNotFoundException]).opt(Class.forName(""))
                                                                                                      ^
```

If I set the type parameter explicitly, it compiles:
```scala
scala> scala.util.control.Exception.catching(classOf[ClassNotFoundException]).opt[Class[_]](Class.forName(""))
res0: Option[java.lang.Class[_]] = None
```